# zim

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: main.rs
src/config/: key_bindings.rs  mod.rs
src/editor/: buffer.rs  cursor.rs  diagnostics.rs  diagnostics.rs.bak  file_finder.rs  history.rs  mod.rs  mode.rs  snake.rs  syntax.rs  viewport.rs
src/ui/: mod.rs
