[package]
name = "zim"
version = "0.1.0"
edition = "2021"
description = "Zim - the modern, fast, easily configurable, AI powered vim from the future"
authors = ["Claude <claude@anthropic.com>"]

[dependencies]
crossterm = "0.26"
tui = { package = "ratatui", version = "0.22.0" }
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
dirs = "5.0"
walkdir = "2.3"
fuzzy-matcher = "0.3"

[dev-dependencies]
tempfile = "3.8"
